--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-text-mask": "^5.5.0",
+    "sass": "^1.79.4",
     "text-mask-addons": "^3.8.0",
     "web-vitals": "^2.1.4"
   },
